Bug 123472 - Unable to create file on gvfs mounted volume
Summary: Unable to create file on gvfs mounted volume
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
: 124985 (view as bug list)
Depends on:
Blocks: Network
  Show dependency treegraph
 
Reported: 2019-02-14 20:09 UTC by Mike Kurtz
Modified: 2021-10-16 07:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Help/About Window (81.31 KB, image/png)
2019-04-12 19:04 UTC, Mike Kurtz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kurtz 2019-02-14 20:09:41 UTC
Performed a clean install of opensuse tumbleweed to root while keeping an earlier ~. Under LO 6.1 I had no issues whatsoever creating files on a remote volume mounted using sftp via gvfs. In 6.2, attempting to create a new file (or rename a file via save as) results in two error messages:

"Error saving the document XXXXXXXX: Nonexistent file."
"Error saving the document XXXXXXXX: General Error. General input/output error."

The terminal has the following output: 

(soffice:23435): GLib-CRITICAL **: 14:06:59.631: g_file_test: assertion 'filename != NULL' failed

The file is not saved. This makes it impossible to use LO effectively with remote data.
Comment 1 Xisco Faulí 2019-03-21 14:22:01 UTC
Hello,
LibreOffice 6.2.2.2 is going to be released today, could you please try again
with this version to see if the problem has been resolved meanwhile? Thanks in
advance
Comment 2 Mike Kurtz 2019-03-21 15:14:11 UTC
Tried to save a file to the network share via gvfs/sftp with LO 6.2.2.1 today and got essentially the same result; the GUI errors were the same and the terminal was essentially the same:

(soffice:11925): GLib-CRITICAL **: 10:10:32.502: g_file_test: assertion 'filename != NULL' failed
Comment 3 Xisco Faulí 2019-04-12 10:55:09 UTC
So it works in Libo 6.1 but not in Libo 6.2 ?

Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 4 Mike Kurtz 2019-04-12 19:04:11 UTC
Created attachment 150719 [details]
Help/About Window
Comment 5 Mike Kurtz 2019-04-12 19:05:10 UTC
It worked in LO 6.1 and not LO 6.2. I did run a distro update on this openSuSE tumbleweed system and the LO upgrade was part of that update. Attached a png of help/about.
Comment 6 chuck.pobanz 2019-04-27 00:39:35 UTC
I have run into this same problem for my Linux clients. Windows client works fine. My server is Ubuntu 16.04 running samba and nothing has been changed on it. My client is Linux mint 19. After upgrading to Libreoffice 6.2.3 from 6.1, I can no longer create a new file, though an existing file can be updated.
Comment 7 Kevin Suo 2019-04-27 11:00:53 UTC
Bibisected using the bibisect-linux-64-6.2 repo:
 f90a939720a29fdaf65fef6ef2e05cb96021d87e is the first bad commit
commit f90a939720a29fdaf65fef6ef2e05cb96021d87e
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Nov 13 08:24:06 2018 +0100

    source ca0308797df86ebece19260f3ca438a0cb437208

author Stephan Bergmann <sbergman@redhat.com>	2018-11-13 08:13:00 +0100
committer Stephan Bergmann <sbergman@redhat.com>	2018-11-13 08:13:00 +0100
commit ca0308797df86ebece19260f3ca438a0cb437208 (patch)
tdf#121337: Fail on GIO error in GIO UCP getPropertyValue

CCing Stephan Bergmann. Would you please take a look?



$ git bisect log
# bad: [8b2cf76950e32ea46ff293ce75177841ad920e38] source 1149d20ce9f8682b58f98d3fa3bf289fc5974087
# good: [f741463dfe1900d3acf87b538c0c043e42bc523d] source 3a801799536e6870f2fb111b1cc00b9575a35a39
git bisect start 'master' 'oldest'
# good: [f2a6a57cb2d0fbe45c9cfafdcf33a816c6ced63f] source da8617d69a7b27a3eeb3f26e207ddf1b4de3eeb3
git bisect good f2a6a57cb2d0fbe45c9cfafdcf33a816c6ced63f
# good: [6ed11ecb665d289c0981da1f10c42877a870e5a2] source b44b9c4519794d159b154a9713c10da1155a5198
git bisect good 6ed11ecb665d289c0981da1f10c42877a870e5a2
# bad: [b86f40dd1acc3d1baa3ffb3c15ac9f07eb53da66] source f918e71d4e615fcc4527051a6e7f6bb4768d1269
git bisect bad b86f40dd1acc3d1baa3ffb3c15ac9f07eb53da66
# good: [a28cd13932f62645e77d63bd3309786c1e8c3cfc] source 52b5955100fdb5898110429814d5369275267a17
git bisect good a28cd13932f62645e77d63bd3309786c1e8c3cfc
# bad: [5d6d1ddefa763ebfca9e0a2522f33a8b1f28510f] source 698942ac73b8502eb1957b70dd165023e8d54c82
git bisect bad 5d6d1ddefa763ebfca9e0a2522f33a8b1f28510f
# good: [b27639cc47860e71920363a6720758e33243faaa] source 4d39ec07808276d7dbd2f92a08524f82ab5d715f
git bisect good b27639cc47860e71920363a6720758e33243faaa
# good: [095d4698cb1afdc4cea5038e18321f4798ab7c2f] source b7d0b49f5708b55e24aabb719e26ce5ec8628161
git bisect good 095d4698cb1afdc4cea5038e18321f4798ab7c2f
# bad: [07065b7a0643f3fbd3e65bc879024c6c0ccba07f] source b389aafee9cfba9dc4dfa552347be39ff9fe41b2
git bisect bad 07065b7a0643f3fbd3e65bc879024c6c0ccba07f
# bad: [727c2e08240b2ab0883d2d17bdd34e557c54b326] source 3460e91ac853964015215ec75be7cf63361ca0e9
git bisect bad 727c2e08240b2ab0883d2d17bdd34e557c54b326
# bad: [34ecd55e5ef85387279ddc20cbcc995b730d025f] source f6b3b696ad9d454f7acbe930439cccc052e9fce2
git bisect bad 34ecd55e5ef85387279ddc20cbcc995b730d025f
# bad: [d3c8643f5a98e67791fa77e3e7ec072d33269b1d] source 3583f7a1256c901199574c8373443038e28813f0
git bisect bad d3c8643f5a98e67791fa77e3e7ec072d33269b1d
# bad: [ee785994dd46546781fa1123280dbc363dc3dcd5] source 630b5db9a10cd49d24d5e563374bd68f1fe670f5
git bisect bad ee785994dd46546781fa1123280dbc363dc3dcd5
# bad: [f90a939720a29fdaf65fef6ef2e05cb96021d87e] source ca0308797df86ebece19260f3ca438a0cb437208
git bisect bad f90a939720a29fdaf65fef6ef2e05cb96021d87e
# first bad commit: [f90a939720a29fdaf65fef6ef2e05cb96021d87e] source ca0308797df86ebece19260f3ca438a0cb437208

---

Note: It gives the following warning even if in good versions when the file is successfully saved, so this warning is possibly not related to this bug:

(soffice:18295): GLib-CRITICAL **: 18:38:15.953: g_file_test: assertion 'filename != NULL' failed
Comment 8 Stephan Bergmann 2019-04-29 08:24:05 UTC
*** Bug 124985 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2019-04-29 11:47:53 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6d3dd64391e67e6cfe406dea047e13227ea94c4b%5E%21

tdf#123472: Propagate getGFileInfo failure less aggressively

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-04-29 16:44:42 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/41747b75076e4446947873b3edc2abe3e3c4ebd1%5E%21

tdf#123472: Propagate getGFileInfo failure less aggressively

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Kevin Suo 2019-05-01 00:17:18 UTC
I confirm it is fixed in
版本: 6.3.0.0.alpha0+
Build ID: 1ae5ca077119982ae83833871326c86d9930ae11
CPU 线程: 4; 操作系统: Linux 4.18; UI 渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded
Comment 12 Thomas Boehm 2019-05-28 11:49:16 UTC
can confirm it's fixed in 6.2.4.2

Version: 6.2.4.2
Build ID: 1:6.2.4-0ubuntu0.16.04.1~lo1
CPU threads: 12; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-GB
Calc: threaded
Comment 13 Mike Kurtz 2019-05-30 16:46:27 UTC
Confirmed fixed, thank you.

Version: 6.2.4.2.0+
Build ID: 20(Build:2)
CPU threads: 4; OS: Linux 4.20; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 14 Mike Kurtz 2019-05-31 18:25:03 UTC
After further testing, the bug persists.

I had a file on an gvfs-mounted sftp share that was locked. I clicked on "enable editing," which creates a new file in that directory, and Writer crashed.

Less severe but the same behavior from a different functionality.
Comment 15 Aron Budea 2019-06-03 00:05:31 UTC
Mike, please open a new bug report on that, and add the link to this one to the See Also field. Please also try to get a backtrace as described here:
https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace