tdf#123472: Propagate getGFileInfo failure less aggressively

...from Content::getPropertyValues.  ca0308797df86ebece19260f3ca438a0cb437208
"tdf#121337: Fail on GIO error in GIO UCP getPropertyValue" had made
Content::getPropertyValues fail for every getGFileInfo failure.  However, when
saving to a not-yet exisiting file, SfxMedium::Transfer_Impl
(sfx2/source/doc/docfile.cxx) requests the properties "Title" and "ObjectId"
from the Content representing the not-yet existing file, and apparently expects
those requests not to fail.  So restructure Content::getPropertyValues to only
call getGFileInfo when actually needed (that covers not failing for the unknown-
anyway "ObjecdtId" property), and handle "Title" specially by not failing for
a non-existing file.  (The documentation at offapi/com/sun/star/ucb/Content.idl
says for the "getPropertyValues" command that: "The execution will not be
aborted, if there are properties requested, that are unknown to the content."
But that leaves it somewhat unclear whether failure to obtain a known property
should be propagated.  It apparently should be in the context of tfd#121337
fixed previously, but apparently not for "Title" here.)

Change-Id: I12a9a5bd93d661922ea3b7b19a84a7e73e7e4b50
Reviewed-on: https://gerrit.libreoffice.org/71515
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 6d3dd64391e67e6cfe406dea047e13227ea94c4b)
Reviewed-on: https://gerrit.libreoffice.org/71525
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>