ucb/source/ucp/gio/gio_content.cxx
@@ -425,12 +425,11 @@ static util::DateTime getDateFromUnix (time_t t)
         return util::DateTime();
 }
 
-uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *pInfo,
-    const uno::Reference< uno::XComponentContext >& rxContext,
-    const uno::Reference< ucb::XCommandEnvironment > & xEnv,
-    const uno::Sequence< beans::Property >& rProperties)
+uno::Reference< sdbc::XRow > Content::getPropertyValues(
+                const uno::Sequence< beans::Property >& rProperties,
+                const uno::Reference< ucb::XCommandEnvironment >& xEnv )
 {
-    rtl::Reference< ::ucbhelper::PropertyValueSet > xRow = new ::ucbhelper::PropertyValueSet( rxContext );
+    rtl::Reference< ::ucbhelper::PropertyValueSet > xRow = new ::ucbhelper::PropertyValueSet( m_xContext );
 
     sal_Int32 nProps;
     const beans::Property* pProps;
@@ -438,12 +437,14 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
     nProps = rProperties.getLength();
     pProps = rProperties.getConstArray();
 
+    GFileInfo *pInfo = nullptr;
     for( sal_Int32 n = 0; n < nProps; ++n )
     {
         const beans::Property& rProp = pProps[ n ];
 
         if ( rProp.Name == "IsDocument" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute(pInfo, G_FILE_ATTRIBUTE_STANDARD_TYPE))
                 xRow->appendBoolean( rProp, ( g_file_info_get_file_type( pInfo ) == G_FILE_TYPE_REGULAR ||
                                                g_file_info_get_file_type( pInfo ) == G_FILE_TYPE_UNKNOWN ) );
@@ -452,6 +453,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "IsFolder" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_STANDARD_TYPE) )
                 xRow->appendBoolean( rProp, ( g_file_info_get_file_type( pInfo ) == G_FILE_TYPE_DIRECTORY ));
             else
@@ -459,6 +461,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "Title" )
         {
+            getFileInfo(xEnv, &pInfo, false);
             if (pInfo != nullptr && g_file_info_has_attribute(pInfo, G_FILE_ATTRIBUTE_STANDARD_DISPLAY_NAME))
             {
                 const char *pName = g_file_info_get_display_name(pInfo);
@@ -469,6 +472,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "IsReadOnly" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_ACCESS_CAN_WRITE ) )
                 xRow->appendBoolean( rProp, !g_file_info_get_attribute_boolean( pInfo, G_FILE_ATTRIBUTE_ACCESS_CAN_WRITE) );
             else
@@ -476,6 +480,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "DateCreated" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_TIME_CREATED ) )
                 xRow->appendTimestamp( rProp, getDateFromUnix(g_file_info_get_attribute_uint64(pInfo, G_FILE_ATTRIBUTE_TIME_CREATED)) );
             else
@@ -483,6 +488,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "DateModified" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo,  G_FILE_ATTRIBUTE_TIME_CHANGED ) )
                 xRow->appendTimestamp( rProp, getDateFromUnix(g_file_info_get_attribute_uint64(pInfo, G_FILE_ATTRIBUTE_TIME_CHANGED)) );
             else
@@ -490,6 +496,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "Size" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_STANDARD_SIZE) )
                 xRow->appendLong( rProp, ( g_file_info_get_size( pInfo ) ));
             else
@@ -502,6 +509,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "IsCompactDisc" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_MOUNTABLE_CAN_EJECT ) )
                 xRow->appendBoolean( rProp, g_file_info_get_attribute_boolean(pInfo, G_FILE_ATTRIBUTE_MOUNTABLE_CAN_EJECT) );
             else
@@ -509,6 +517,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "IsRemoveable" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_MOUNTABLE_CAN_UNMOUNT ) )
                 xRow->appendBoolean( rProp, g_file_info_get_attribute_boolean(pInfo, G_FILE_ATTRIBUTE_MOUNTABLE_CAN_UNMOUNT ) );
             else
@@ -520,6 +529,7 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
         }
         else if ( rProp.Name == "IsHidden" )
         {
+            getFileInfo(xEnv, &pInfo, true);
             if (pInfo != nullptr && g_file_info_has_attribute( pInfo, G_FILE_ATTRIBUTE_STANDARD_IS_HIDDEN) )
                 xRow->appendBoolean( rProp, ( g_file_info_get_is_hidden ( pInfo ) ) );
             else
@@ -538,19 +548,6 @@ uno::Reference< sdbc::XRow > Content::getPropertyValuesFromGFileInfo(GFileInfo *
     }
 
     return uno::Reference< sdbc::XRow >( xRow.get() );
-}
-
-uno::Reference< sdbc::XRow > Content::getPropertyValues(
-                const uno::Sequence< beans::Property >& rProperties,
-                const uno::Reference< ucb::XCommandEnvironment >& xEnv )
-{
-    GError * err = nullptr;
-    GFileInfo *pInfo = getGFileInfo(xEnv, &err);
-    if (pInfo == nullptr && !mbTransient) {
-        ucbhelper::cancelCommandExecution(mapGIOError(err), xEnv);
-    }
-    assert(err == nullptr);
-    return getPropertyValuesFromGFileInfo(pInfo, m_xContext, xEnv, rProperties);
 }
 
 static lang::IllegalAccessException
@@ -638,6 +635,25 @@ bool Content::exchangeIdentity( const uno::Reference< ucb::XContentIdentifier >&
     }
 
     return false;
+}
+
+void Content::getFileInfo(
+    css::uno::Reference<css::ucb::XCommandEnvironment> const & env, GFileInfo ** info, bool fail)
+{
+    assert(info != nullptr);
+    if (*info == nullptr)
+    {
+        GError * err = nullptr;
+        *info = getGFileInfo(env, &err);
+        if (*info == nullptr && !mbTransient && fail)
+        {
+            ucbhelper::cancelCommandExecution(mapGIOError(err), env);
+        }
+        else if (err != nullptr)
+        {
+            g_error_free(err);
+        }
+    }
 }
 
 uno::Sequence< uno::Any > Content::setPropertyValues(
